updating ref again

--- a/transparencia.html
+++ b/transparencia.html
@@ -64,11 +64,10 @@
 <body>
   <div class="hero-image">
     <div class="hero-text">
-        <h1 class="h1">Transparência e ética<h1>
-        <form action="https://api.whatsapp.com/send?phone=5581986516882&text=Ol%C3%A1%2C%20Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os%20da%20ONG" method="get" target="_blank">
-          <button class="bg-color-yellow" type="submit">                
-            Entre em contato</button>
-       </form>        
+        <h1 class="h1">Transparência e ética<h1>        
+          <button class="bg-color-yellow"
+          onclick="location.href='https://api.whatsapp.com/send?phone=5581986516882&text=Ol%C3%A1%2C%20Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os%20da%20ONG'" type="button">          
+            Entre em contato</button>          
     </div>
   </div> 
   <div class="about-container">
