--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             Semper lacinia dignissim id feugiat. Phasellus gravida scelerisque.
           </div>         
       </div>
-      <div class="block column cleanzoom">
+      <div class="block column zoom">
         <div class="title"> Valores
         </div>
           <div class="text">
@@ -158,7 +158,10 @@
         <blockquote class="instagram-media"
         data-instgrm-permalink="https://www.instagram.com/p/CXTqpnJrbwX/?utm_source=ig_embed&amp;utm_campaign=loading"
         data-instgrm-version="14"
-        style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+        style=" background:#FFF; border:0; 
+        border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
+        margin: 1px; min-height:400px; max-height:400px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); 
+        width:calc(100% - 2px);">
     
     </blockquote>
     <script async src="//www.instagram.com/embed.js"></script>
@@ -167,7 +170,10 @@
         <blockquote class="instagram-media"
     data-instgrm-permalink="https://www.instagram.com/p/CXTqpnJrbwX/?utm_source=ig_embed&amp;utm_campaign=loading"
     data-instgrm-version="14"
-    style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+    style=" background:#FFF; border:0; 
+    border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
+    margin: 1px; min-height:400px; max-height:400px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); 
+    width:calc(100% - 2px);">
 
 </blockquote>
 <script async src="//www.instagram.com/embed.js"></script>
@@ -176,7 +182,10 @@
         <blockquote class="instagram-media"
     data-instgrm-permalink="https://www.instagram.com/p/CXTqpnJrbwX/?utm_source=ig_embed&amp;utm_campaign=loading"
     data-instgrm-version="14"
-    style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+    style=" background:#FFF; border:0; 
+    border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
+    margin: 1px; min-height:400px; max-height:400px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); 
+    width:calc(100% - 2px);">
 
 </blockquote>
 <script async src="//www.instagram.com/embed.js"></script>
@@ -185,7 +194,10 @@
         <blockquote class="instagram-media"
     data-instgrm-permalink="https://www.instagram.com/p/CXTqpnJrbwX/?utm_source=ig_embed&amp;utm_campaign=loading"
     data-instgrm-version="14"
-    style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+    style=" background:#FFF; border:0; 
+    border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
+    margin: 1px; min-height:400px; max-height:400px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); 
+    width:calc(100% - 2px);">
 
 </blockquote>
 <script async src="//www.instagram.com/embed.js"></script>
