--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         Saiba Mais        
         </button>             
   </div>
-  <div class="insta-container">
+  <div class="insta-container cleanzoom">
     <h1 class="h1">@ondanjodaguarda</h1>
     <div class="row4">
       <div class="block column">                
@@ -167,30 +167,29 @@
     <script async src="//www.instagram.com/embed.js"></script>
       </div>
       <div class="block column">       
-        <blockquote class="instagram-media"
-    data-instgrm-permalink="https://www.instagram.com/p/CPYrmxFLvEx/?utm_source=ig_embed&amp;utm_campaign=loading"
-    data-instgrm-version="10"
-    style=" background:#FFF; border:0; 
-    border-radius:40px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
-    margin: 1px; min-height:400px; max-height:400px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); 
-    width:calc(100% - 2px);">
+        <blockquote class="instagram-media cleanzoom"
+          data-instgrm-permalink="https://www.instagram.com/p/CPYrmxFLvEx/?utm_source=ig_embed&amp;utm_campaign=loading"
+          data-instgrm-version="10"
+          style=" background:#FFF; border:0; 
+          border-radius:40px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
+          margin: 1px; min-height:400px; max-height:400px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); 
+          width:calc(100% - 2px);">
+    </blockquote>
+    <script async src="//www.instagram.com/embed.js"></script>               
+          </div>
+          <div class="block column cleanzoom">                
+            <blockquote class="instagram-media"
+        data-instgrm-permalink="https://www.instagram.com/p/CX9oepIr7w3/?utm_source=ig_embed&amp;utm_campaign=loading"
+        data-instgrm-version="10"
+        style=" background:#FFF; border:0; 
+        border-radius:40px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
+        margin: 1px; min-height:400px; max-height:400px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); 
+        width:calc(100% - 2px);">
 
-</blockquote>
-<script async src="//www.instagram.com/embed.js"></script>               
-      </div>
-      <div class="block column">                
-        <blockquote class="instagram-media"
-    data-instgrm-permalink="https://www.instagram.com/p/CX9oepIr7w3/?utm_source=ig_embed&amp;utm_campaign=loading"
-    data-instgrm-version="10"
-    style=" background:#FFF; border:0; 
-    border-radius:40px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); 
-    margin: 1px; min-height:400px; max-height:400px; max-width:400px; min-width:400px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); 
-    width:calc(100% - 2px);">
-
-</blockquote>
+    </blockquote>
 <script async src="//www.instagram.com/embed.js"></script>        
       </div>
-      <div class="block column">               
+      <div class="block column cleanzoom">               
         <blockquote class="instagram-media"
     data-instgrm-permalink="https://www.instagram.com/p/CVVzu_orpTV/?utm_source=ig_embed&amp;utm_campaign=loading"
     data-instgrm-version="10"
