--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
   </div>
   </div>
-  <div class="do-container">
+  <div class="do-container cleanzoom">
     <h1 class="h1">O que fazemos</h1>
     <div class="row4">
       <div class="block column zoom">                
@@ -151,11 +151,11 @@
         Saiba Mais        
         </button>             
   </div>
-  <div class="insta-container cleanzoom">
+  <div class="insta-container">
     <h1 class="h1">@ondanjodaguarda</h1>
     <div class="row4">
       <div class="block column">                
-        <blockquote class="instagram-media"
+        <blockquote class="instagram-media cleanzoom"
         data-instgrm-permalink="https://www.instagram.com/p/CXTqpnJrbwX/?utm_source=ig_embed&amp;utm_campaign=loading"
         data-instgrm-version="10"
         style=" background:#FFF; border:0; 
