--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
   </nav>
 </header>
 <body>
-  <div class="hero-image">
+  <div class="hero-image cleanzoom">
     <div class="hero-text">
         <h1 class="h1">Venha fazer parte da<h1>
         <h1 class="h1">nossa história</h1>           
         <form action="https://www.anjodaguarda.portalsolidario.com.br" method="get" target="_blank">
-          <button class="bg-color-yellow" type="submit">                
+          <button class="bg-color-yellow cleanzoom" type="submit" >                
             Faça sua doação
             <img class="icon_wing" src="img/wingsblue.png" height="35"/></button>
        </form>        
@@ -151,7 +151,7 @@
         Saiba Mais        
         </button>             
   </div>
-  <div class="insta-container">
+  <div class="insta-container cleanzoom">
     <h1 class="h1">@ondanjodaguarda</h1>
     <div class="row4">
       <div class="block column">                
@@ -202,12 +202,12 @@
 <script async src="//www.instagram.com/embed.js"></script>         
       </div>
     </div>    
-    <button class="btn-color-blue"
+    <button class="btn-color-blue cleanzoom"
     onclick="location.href='https://www.instagram.com/onganjodaguarda/'" type="button">      
       Siga a ong
     </button>
   </div>
-  <div class="hero-image-back">
+  <div class="hero-image-back cleanzoom">
     <div class="hero-text">
         <h1 class="h1">Agora você nos ajuda<h1>
         <h1 class="h1">através da lojinha online</h1>
