--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
       <div class="collapse navbar-collapse" id="navbar-items">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active bg-color-white" aria-current="page" href="index.html">Sobre a ONG</a>
+            <a class="nav-link active bg-color-white zoom" aria-current="page" href="index.html">Sobre a ONG</a>
           </li>            
           <li class="nav-item">
-            <a class="nav-link bg-color-white" href="transparencia.html">Transparência</a>
+            <a class="nav-link bg-color-white zoom" href="transparencia.html">Transparência</a>
           </li>
           <li class="nav-item">
-            <a class="nav-item nav-link bg-color-blue" id="team-menu" href="https://www.anjodaguarda.portalsolidario.com.br/">Faça sua doação</a>               
+            <a class="nav-item nav-link bg-color-blue zoom" id="team-menu" href="https://www.anjodaguarda.portalsolidario.com.br/">Faça sua doação</a>               
           </li>
         </ul>
       </div>
@@ -73,7 +73,7 @@
        </form>        
     </div>
   </div> 
-  <div class="about-container">
+  <div class="about-container cleanzoom">
     <h1 class="h1">Sobre a ONG</h1>
     <div class="row">
       <div class="block column cleanzoom">
