--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="container" id="nav-container">      
   <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
     <div class="container py-3">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand cleanzoom" href="#">
         <img src="img/banner 1.jpg" alt="ong"/>        
       </a>
       <button
@@ -48,13 +48,13 @@
       <div class="collapse navbar-collapse" id="navbar-items">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active bg-color-white zoom" aria-current="page" href="index.html">Sobre a ONG</a>
+            <a class="nav-link active bg-color-white cleanzoom" aria-current="page" href="index.html">Sobre a ONG</a>
           </li>            
           <li class="nav-item">
-            <a class="nav-link bg-color-white zoom" href="transparencia.html">Transparência</a>
+            <a class="nav-link bg-color-white cleanzoom" href="transparencia.html">Transparência</a>
           </li>
           <li class="nav-item">
-            <a class="nav-item nav-link bg-color-blue zoom" id="team-menu" href="https://www.anjodaguarda.portalsolidario.com.br/">Faça sua doação</a>               
+            <a class="nav-item nav-link bg-color-blue cleanzoom" id="team-menu" href="https://www.anjodaguarda.portalsolidario.com.br/">Faça sua doação</a>               
           </li>
         </ul>
       </div>
