--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <div class="container" id="nav-container">      
   <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
     <div class="container py-3">
-      <a class="navbar-brand cleanzoom" href="#">
-        <img src="img/banner 1.jpg" alt="ong"/>        
+      <a class="navbar-brand" href="index.html">
+        <img class = "cleanzoom" src="img/banner 1.jpg" alt="ong"/>        
       </a>
       <button
         class="navbar-toggler"
