--- a/transparencia.html
+++ b/transparencia.html
@@ -31,7 +31,7 @@
   <div class="container" id="nav-container">      
   <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
     <div class="container py-3">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="img/banner 1.jpg" alt="ong"/>        
       </a>
       <button
