--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
        </form>        
     </div>
   </div> 
-  <div class="about-container cleanzoom">
+  <div class="about-container microzoom">
     <h1 class="h1">Sobre a ONG</h1>
     <div class="row">
-      <div class="block column cleanzoom">
+      <div class="block column microzoom">
         <div class="title"> Missão         
         </div>        
           <div class="text">
@@ -85,7 +85,7 @@
             Semper lacinia dignissim id feugiat. Phasellus gravida scelerisque.
           </div>          
       </div>
-      <div class="block column cleanzoom">
+      <div class="block column microzoom">
         <div class="title"> Visão
         </div>
           <div class="text">
@@ -94,7 +94,7 @@
             Semper lacinia dignissim id feugiat. Phasellus gravida scelerisque.
           </div>         
       </div>
-      <div class="block column zoom">
+      <div class="block column microzoom">
         <div class="title"> Valores
         </div>
           <div class="text">
@@ -105,7 +105,7 @@
       </div>
   </div>
   </div>
-  <div class="do-container cleanzoom">
+  <div class="do-container microzoom">
     <h1 class="h1">O que fazemos</h1>
     <div class="row4">
       <div class="block column zoom">                
@@ -151,7 +151,7 @@
         Saiba Mais        
         </button>             
   </div>
-  <div class="insta-container cleanzoom">
+  <div class="insta-container microzoom">
     <h1 class="h1">@ondanjodaguarda</h1>
     <div class="row4">
       <div class="block column">                
@@ -207,7 +207,7 @@
       Siga a ong
     </button>
   </div>
-  <div class="hero-image-back cleanzoom">
+  <div class="hero-image-back microzoom">
     <div class="hero-text">
         <h1 class="h1">Agora você nos ajuda<h1>
         <h1 class="h1">através da lojinha online</h1>
