--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </nav>
 </header>
 <body>
-  <div class="hero-image cleanzoom">
+  <div class="hero-image">
     <div class="hero-text">
         <h1 class="h1">Venha fazer parte da<h1>
         <h1 class="h1">nossa história</h1>           
@@ -73,7 +73,7 @@
        </form>        
     </div>
   </div> 
-  <div class="about-container microzoom">
+  <div class="about-container">
     <h1 class="h1">Sobre a ONG</h1>
     <div class="row">
       <div class="block column microzoom">
@@ -105,7 +105,7 @@
       </div>
   </div>
   </div>
-  <div class="do-container microzoom">
+  <div class="do-container">
     <h1 class="h1">O que fazemos</h1>
     <div class="row4">
       <div class="block column zoom">                
@@ -151,7 +151,7 @@
         Saiba Mais        
         </button>             
   </div>
-  <div class="insta-container microzoom">
+  <div class="insta-container">
     <h1 class="h1">@ondanjodaguarda</h1>
     <div class="row4">
       <div class="block column">                
