--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
       </div>
     </div>    
-      <button class="btn-color-blue" 
+      <button class="btn-color-blue cleanzoom" 
       onclick="location.href='https://api.whatsapp.com/send?phone=5581986516882&text=Ol%C3%A1%2C%20Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os%20da%20ONG'" type="button">          
         Saiba Mais        
         </button>             
@@ -207,13 +207,13 @@
       Siga a ong
     </button>
   </div>
-  <div class="hero-image-back microzoom">
+  <div class="hero-image-back">
     <div class="hero-text">
         <h1 class="h1">Agora você nos ajuda<h1>
         <h1 class="h1">através da lojinha online</h1>
         <h1 class="h1">do Portal Solidário</h1> 
         <form action="https://www.anjodaguarda.portalsolidario.com.br" method="get" target="_blank">
-          <button class="bg-color-blue" type="submit">     
+          <button class="bg-color-blue cleanzoom" type="submit">     
             Faça sua doação
             <img class="icon_wing" src="img/wings.png" height="35"/></button>
        </form>             
