add second page zooms

--- a/transparencia.html
+++ b/transparencia.html
@@ -48,13 +48,13 @@
       <div class="collapse navbar-collapse" id="navbar-items">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link bg-color-white" href="index.html">Sobre a ONG</a>
+            <a class="nav-link bg-color-white cleanzoom" href="index.html">Sobre a ONG</a>
           </li>            
           <li class="nav-item">
-            <a class="nav-link active bg-color-white" aria-current="page" href="transparencia.html">Transparência</a>
+            <a class="nav-link active bg-color-white cleanzoom" aria-current="page" href="transparencia.html">Transparência</a>
           </li>
           <li class="nav-item">
-            <a class="nav-item nav-link bg-color-blue" id="team-menu" href="https://www.anjodaguarda.portalsolidario.com.br/">Faça sua doação</a>               
+            <a class="nav-item nav-link bg-color-blue cleanzoom" id="team-menu" href="https://www.anjodaguarda.portalsolidario.com.br/">Faça sua doação</a>               
           </li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
   <div class="hero-image">
     <div class="hero-text">
         <h1 class="h1">Transparência e ética<h1>        
-          <button class="bg-color-yellow"
+          <button class="bg-color-yellow cleanzoom"
           onclick="location.href='https://api.whatsapp.com/send?phone=5581986516882&text=Ol%C3%A1%2C%20Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os%20da%20ONG'" type="button">          
             Entre em contato</button>          
     </div>
@@ -73,21 +73,21 @@
   <div class="about-container">
     <h1 class="h1">Equipe Executiva</h1>
     <div class="row">
-      <div class="block column">
+      <div class="block column cleanzoom">
         <div class="title"> Glória Maria de Sousa Pimentel         
         </div>        
           <div class="text">
             Presidente
           </div>          
       </div>
-      <div class="block column">
+      <div class="block column cleanzoom">
         <div class="title"> Ladjane Vicente da Silva
         </div>
           <div class="text">
             Vice Presidente
           </div>         
       </div>
-      <div class="block column">
+      <div class="block column cleanzoom">
         <div class="title"> Gustavo Marcelino da Silva
         </div>
           <div class="text">
@@ -96,21 +96,21 @@
       </div>
     </div>
     <div class="row">
-      <div class="block column">
+      <div class="block column cleanzoom">
         <div class="title"> Roberto de Sousa Pimentel
         </div>        
           <div class="text">
             Vice Secretário
           </div>          
       </div>
-      <div class="block column">
+      <div class="block column cleanzoom">
         <div class="title"> Fernando Cosmo O. de Arruda
         </div>
           <div class="text">
             Tesoureiro
           </div>         
       </div>
-      <div class="block column">
+      <div class="block column cleanzoom">
         <div class="title"> Marcelino de Sousa Pimentel
         </div>
           <div class="text">
@@ -122,22 +122,22 @@
   <div class="do-container">
     <h1 class="h1">Arquivos e documentos</h1>
     <div class="row4">
-      <div class="block column">                
+      <div class="block column cleanzoom">                
           <img class="icon_do" src="img/icons/do/Ellipse 3.png" height="35"/></button>
           <div class="title2"> Balanço Anual 2022</div>
           <div class="subtitle"> Acessar documento</div>
       </div>
-      <div class="block column">                
+      <div class="block column cleanzoom">                
         <img class="icon_do" src="img/icons/do/Ellipse 3.png" height="35"/></button>
         <div class="title2"> Ata de Eleição e Posse</div>
         <div class="subtitle"> Acessar documento</div>
       </div>
-      <div class="block column">                
+      <div class="block column cleanzoom">                
         <img class="icon_do" src="img/icons/do/Ellipse 3.png" height="35"/></button>
         <div class="title2"> Estatuto Social</div>
         <div class="subtitle"> Acessar documento</div>
       </div>
-      <div class="block column">                
+      <div class="block column cleanzoom">                
         <img class="icon_do" src="img/icons/do/Ellipse 3.png" height="35"/></button>
         <div class="title2"> Balanço Patrimonial</div>
         <div class="subtitle"> Acessar documento</div>
@@ -151,7 +151,7 @@
         <h1 class="h1">através da lojinha online</h1>
         <h1 class="h1">do Portal Solidário</h1> 
         <form action="https://www.anjodaguarda.portalsolidario.com.br" method="get" target="_blank">
-          <button class="bg-color-blue" type="submit">     
+          <button class="bg-color-blue cleanzoom" type="submit">     
             Faça sua doação
             <img class="icon_wing" src="img/wings.png" height="35"/></button>
        </form>             
